fixed disappear scrollbar

--- a/browser/main/global.styl
+++ b/browser/main/global.styl
@@ -15,6 +15,16 @@ body
   font-weight 200
   -webkit-font-smoothing antialiased
 
+::-webkit-scrollbar-track
+  border-radius 10px
+
+::-webkit-scrollbar
+  width 12px
+
+::-webkit-scrollbar-thumb
+  box-shadow inset 0 0 6px rgba(0, 0, 0, 0.3)
+  background-color rgba(0, 0, 0, 0.3)
+
 button, input, select, textarea
   font-family DEFAULT_FONTS
 
@@ -85,7 +95,7 @@ modalBackColor = white
     absolute top left bottom right
     background-color modalBackColor
     z-index modalZIndex + 1
-    
+
 
 body[data-theme="dark"]
   .ModalBase
@@ -140,4 +150,3 @@ body[data-theme="monokai"]
       background-color $ui-monokai-backgroundColor
   .sortableItemHelper
     color: $ui-monokai-text-color
-
